k8s/posgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finlake-postgres
  namespace: finlake
spec:
  replicas: 1
  selector: { matchLabels: { app: finlake-postgres } }
  template:
    metadata: { labels: { app: finlake-postgres } }
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts: [{ name: data, mountPath: /var/lib/postgresql/data }]
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: postgres-pvc }
---
# Changing from NodePort to LoadBalancer type to get an external IP Adress where it can be configured to DBeaver.
# But, current quota has limit of 3 Public IP Address in a region, Kubenetes is using 1, ingress-nginx controller is using another, 3rd one is mystery
apiVersion: v1
kind: Service
metadata: { name: finlake-postgres, namespace: finlake }
spec:
  selector:
    app: finlake-postgres
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
